# rl4caribou

./: .gitignore  Equations.md  LICENSE  README.md  Scenarios.md  noxfile.py  pyproject.toml
.github/workflows/: run-tests.yml
hyperpars/: example.yml  ppo-caribou-v0-1.yml  ppo-caribou.yml  rppo-caribou.yml  td3-caribou.yml  tqc-caribou.yml
hyperpars/rllib/: ppo-asm.yml
notebooks/: 4-15-Meeting-Notebook.ipynb  compare-solutions.ipynb  optimal-fixed-policy-cont.ipynb  optimal-fixed-policy.ipynb  policy-evaluation.ipynb
scripts/: train.py  train_algos.sh
src/rl4caribou/: __init__.py
src/rl4caribou/agents/: __init__.py  const_action.py  const_escapement.py
src/rl4caribou/envs/: caribou.py  caribou_ode.py
src/rl4caribou/utils/: __init__.py  hugging_face.py  sb3.py
tests/: test_caribou.py
